package(default_visibility = ["//visibility:public"])

load("@rules_scala_annex//rules:scala.bzl", "scala_library")

# alias added for convenience. To call, use: bazel run //webapi:GenerateContributorsFile
alias(
    name = "GenerateContributorsFile",
    actual = "//webapi/src/main/scala/org/knora/webapi/contributors:GenerateContributorsFile",
)

# alias added for convenience. To call, use: bazel run //webapi:app_cli
alias(
    name = "app_cli",
    actual = "//webapi/src/main/scala/org/knora/webapi/app:app_cli",
)

# alias added for convenience. To call, use: bazel run //webapi:app_repl
alias(
    name = "app_repl",
    actual = "//webapi/src/main/scala/org/knora/webapi/app:app_repl",
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "main_library",
    testonly = True,
    resources = [
        "//knora-ontologies",
        "//webapi/scripts:fuseki_repository_config_ttl_template",
        "//webapi/src/main/resources",
    ],
    # unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "test_library",
    testonly = True,
    resources = [
        "//sipi/config",
        "//webapi/src/test/resources",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "it_library",
    testonly = True,
    srcs = [
        "//webapi/src/it/scala/org/knora/webapi:src",
    ],
    resources = [
        "//sipi/config",
        "//webapi/src/it/resources",
    ],
    # unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
    deps = [
        "//webapi/src/main/scala/org/knora/webapi",
        "//webapi/src/main/scala/org/knora/webapi/app",
        "//webapi/src/main/scala/org/knora/webapi/core",
        "//webapi/src/main/scala/org/knora/webapi/exceptions",
        "//webapi/src/main/scala/org/knora/webapi/messages",
        "//webapi/src/main/scala/org/knora/webapi/settings",
        "//webapi/src/main/scala/org/knora/webapi/sharedtestdata",
        "//webapi/src/main/scala/org/knora/webapi/util",
        # Logging
        "@maven//:com_typesafe_scala_logging_scala_logging_2_12",
        "@maven//:org_slf4j_slf4j_api",
        # Akka
        "@maven//:com_typesafe_akka_akka_actor_2_12",
        "@maven//:com_typesafe_akka_akka_http_2_12",
        "@maven//:com_typesafe_akka_akka_http_core_2_12",
        "@maven//:com_typesafe_akka_akka_http_spray_json_2_12",
        # "@maven//:com_typesafe_akka_akka_parsing_2_12",
        "@maven//:com_typesafe_akka_akka_stream_2_12",
        "@maven//:com_typesafe_config",
        "@maven//:io_spray_spray_json_2_12",
        "@maven//:org_scala_lang_modules_scala_xml_2_12",
        # "@maven//:org_scala_lang_scala_library",
        # "@maven//:org_scala_lang_scala_reflect",
        "@maven//:org_scalactic_scalactic_2_12",
        "@maven//:org_scalatest_scalatest_2_12",
        "@maven//:org_testcontainers_testcontainers",
        # "@maven//:junit_junit",
        "@maven//:org_xmlunit_xmlunit_core",
    ],
)
