package(default_visibility = ["//visibility:public"])

load("@rules_scala_annex//rules:scala.bzl", "scala_library")

# alias added for convenience. To call, use: bazel run //webapi:GenerateContributorsFile
alias(
    name = "GenerateContributorsFile",
    actual = "//webapi/src/main/scala/org/knora/webapi/contributors:GenerateContributorsFile",
)

# alias added for convenience. To call, use: bazel run //webapi:app_cli
alias(
    name = "app_cli",
    actual = "//webapi/src/main/scala/org/knora/webapi/app:app_cli",
)

# alias added for convenience. To call, use: bazel run //webapi:app_repl
alias(
    name = "app_repl",
    actual = "//webapi/src/main/scala/org/knora/webapi/app:app_repl",
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "main_library",
    testonly = True,
    resources = [
        "//knora-ontologies",
        "//webapi/scripts:fuseki_repository_config_ttl_template",
        "//webapi/src/main/resources",
    ],
    # unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "test_library",
    testonly = True,
    resources = [
        "//sipi/config",
        "//webapi/src/test/resources",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_12",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
)
