package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_repl", "scala_test")

# alias added for convenience. To call, use: bazel run //webapi:GenerateContributorsFile
alias(
    name = "GenerateContributorsFile",
    actual = "//webapi/src/main/scala/org/knora/webapi/contributors:GenerateContributorsFile",
)

# alias added for convenience. To call, use: bazel run //webapi:app_cli
alias(
    name = "app_cli",
    actual = "//webapi/src/main/scala/org/knora/webapi/app:app_cli",
)

# alias added for convenience. To call, use: bazel run //webapi:app_repl
alias(
    name = "app_repl",
    actual = "//webapi/src/main/scala/org/knora/webapi/app:app_repl",
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "main_library",
    testonly = True,
    resources = [
        "//knora-ontologies",
        "//webapi/scripts:fuseki_repository_config_ttl_template",
        "//webapi/src/main/resources",
    ],
    unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_13",
        "@maven//:org_slf4j_log4j_over_slf4j",
    ],
    deps = [
        "//webapi/src/main/scala/org/knora/webapi",
        "//webapi/src/main/scala/org/knora/webapi/core",
        "//webapi/src/main/scala/org/knora/webapi/exceptions",
        "//webapi/src/main/scala/org/knora/webapi/http/directives",
        "//webapi/src/main/scala/org/knora/webapi/http/handler",
        "//webapi/src/main/scala/org/knora/webapi/http/version",
        "//webapi/src/main/scala/org/knora/webapi/http/version/versioninfo",
        "//webapi/src/main/scala/org/knora/webapi/instrumentation",
        "//webapi/src/main/scala/org/knora/webapi/messages",
        "//webapi/src/main/scala/org/knora/webapi/responders",
        "//webapi/src/main/scala/org/knora/webapi/routing",
        "//webapi/src/main/scala/org/knora/webapi/settings",
        "//webapi/src/main/scala/org/knora/webapi/store",
        "//webapi/src/main/scala/org/knora/webapi/store/eventstore",
        "//webapi/src/main/scala/org/knora/webapi/util",
        "//webapi/src/main/scala/org/knora/webapi/util/cache",
        # Logging
        "@maven//:com_typesafe_scala_logging_scala_logging_2_13",
        "@maven//:org_slf4j_jcl_over_slf4j",
        "@maven//:org_slf4j_slf4j_api",
        #
        "@maven//:ch_megard_akka_http_cors_2_13",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_andrewoma_dexx_collection",
        "@maven//:com_apicatalog_titanium_json_ld",
        "@maven//:javax_json_javax_json_api",
        "@maven//:com_eventstore_db_client_java",
        "@maven//:org_glassfish_jakarta_json",
        "@maven//:com_github_swagger_akka_http_swagger_akka_http_2_13",
        "@maven//:com_google_gwt_gwt_servlet",
        "@maven//:com_ibm_icu_icu4j",
        "@maven//:com_pauldijou_jwt_core_2_13",
        "@maven//:com_pauldijou_jwt_json_common_2_13",
        "@maven//:com_pauldijou_jwt_spray_json_2_13",
        "@maven//:com_sksamuel_diff_diff",
        "@maven//:com_twitter_chill_2_13",
        # Akka
        "@maven//:com_typesafe_akka_akka_actor_2_13",
        "@maven//:com_typesafe_akka_akka_http_2_13",
        "@maven//:com_typesafe_akka_akka_http_core_2_13",
        "@maven//:com_typesafe_akka_akka_http_spray_json_2_13",
        "@maven//:com_typesafe_akka_akka_parsing_2_13",
        "@maven//:com_typesafe_akka_akka_stream_2_13",
        "@maven//:com_typesafe_config",
        # Templates
        "@maven//:com_typesafe_play_twirl_api_2_13",
        "@maven//:commons_cli_commons_cli",
        "@maven//:commons_codec_commons_codec",
        "@maven//:commons_io_commons_io",
        "@maven//:commons_validator_commons_validator",
        # Telemetry
        "@maven//:io_kamon_kamon_core_2_13",
        "@maven//:io_kamon_kamon_instrumentation_common_2_13",
        # "@maven//:io_kamon_kamon_logback_2_13",
        # "@maven//:io_kamon_kamon_prometheus_2_13",
        "@maven//:io_kamon_kamon_scala_future_2_13",
        #
        "@maven//:io_spray_spray_json_2_13",
        "@maven//:io_swagger_swagger_annotations",
        "@maven//:io_swagger_swagger_jaxrs",
        "@maven//:io_swagger_swagger_models",
        "@maven//:javax_ws_rs_jsr311_api",
        # "@maven//:joda_time_joda_time",
        "@maven//:net_sf_ehcache_ehcache",
        "@maven//:net_sf_saxon_Saxon_HE",
        "@maven//:org_apache_commons_commons_csv",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:org_apache_commons_commons_pool2",
        "@maven//:org_apache_commons_commons_text",
        "@maven//:org_apache_httpcomponents_httpclient",
        "@maven//:org_apache_httpcomponents_httpclient_cache",
        "@maven//:org_apache_httpcomponents_httpcore",
        "@maven//:org_apache_jena_apache_jena_libs",
        "@maven//:org_apache_jena_jena_arq",
        "@maven//:org_apache_jena_jena_base",
        "@maven//:org_apache_jena_jena_core",
        "@maven//:org_apache_jena_jena_tdb",
        "@maven//:org_apache_jena_jena_text",
        "@maven//:org_apache_lucene_lucene_core",
        "@maven//:org_eclipse_rdf4j_rdf4j_client",
        "@maven//:org_jodd_jodd",
        "@maven//:org_rogach_scallop_2_13",
        "@maven//:org_scala_lang_modules_scala_java8_compat_2_13",
        "@maven//:org_scala_lang_modules_scala_xml_2_13",
        "@maven//:org_scala_lang_scala_library",
        "@maven//:org_scala_lang_scala_reflect",
        "@maven//:org_springframework_security_spring_security_core",
        "@maven//:redis_clients_jedis",
    ],
)

# Should be removed, after each scala_test rule is refactored to use direct
# dependencies to the needed packages.
scala_library(
    name = "test_library",
    testonly = True,
    srcs = [
        "//webapi/src/test/scala/org/knora/webapi:srcs",
    ],
    resources = [
        "//sipi/config",
        "//webapi/src/test/resources",
    ],
    unused_dependency_checker_mode = "warn",
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:ch_qos_logback_logback_core",
        "@maven//:com_typesafe_akka_akka_slf4j_2_13",
        "@maven//:org_slf4j_log4j_over_slf4j",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
    ],
    deps = [
        "//webapi/src/main/scala/org/knora/webapi",
        "//webapi/src/main/scala/org/knora/webapi/app",
        "//webapi/src/main/scala/org/knora/webapi/core",
        "//webapi/src/main/scala/org/knora/webapi/exceptions",
        "//webapi/src/main/scala/org/knora/webapi/http/handler",
        "//webapi/src/main/scala/org/knora/webapi/instrumentation",
        "//webapi/src/main/scala/org/knora/webapi/messages",
        "//webapi/src/main/scala/org/knora/webapi/feature",
        "//webapi/src/main/scala/org/knora/webapi/responders",
        "//webapi/src/main/scala/org/knora/webapi/routing",
        "//webapi/src/main/scala/org/knora/webapi/settings",
        "//webapi/src/main/scala/org/knora/webapi/store",
        "//webapi/src/main/scala/org/knora/webapi/store/eventstore",
        "//webapi/src/main/scala/org/knora/webapi/util",
        # Logging
        "@maven//:com_typesafe_scala_logging_scala_logging_2_13",
        "@maven//:org_slf4j_slf4j_api",
        # Test Libs
        "@maven//:com_typesafe_akka_akka_testkit_2_13",
        "@maven//:com_typesafe_akka_akka_http_testkit_2_13",
        "@maven//:com_typesafe_akka_akka_actor_2_13",
        "@maven//:com_typesafe_akka_akka_http_2_13",
        "@maven//:com_typesafe_akka_akka_http_core_2_13",
        "@maven//:com_typesafe_akka_akka_http_spray_json_2_13",
        "@maven//:com_typesafe_akka_akka_stream_2_13",
        "@maven//:com_typesafe_config",
        "@maven//:io_spray_spray_json_2_13",
        "@maven//:org_scalactic_scalactic_2_13",
        "@maven//:org_scalatest_scalatest_core_2_13",
        "@maven//:org_scalatest_scalatest_wordspec_2_13",
        "@maven//:org_scalatest_scalatest_matchers_core_2_13",
        "@maven//:org_scalatest_scalatest_shouldmatchers_2_13",
        "@maven//:org_scalatest_scalatest_compatible",
        "@maven//:org_testcontainers_testcontainers",
        "@maven//:junit_junit",
        "@maven//:org_apache_commons_commons_pool2",
        "@maven//:redis_clients_jedis",
    ],
)
