package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# builds the docker image
container_image(
    name = "image",
    base = "@openjdk11//image",
    cmd = [
        "java",
        "-jar",
        "app_cli_deploy.jar",
    ],
    # entrypoint = ["java", "-jar", "webapi_deploy.jar"],
    files = [
        "//webapi/src/main/scala/org/knora/webapi/app:app_cli_deploy.jar",
    ],
    labels = {
        "MAINTAINER": "400790+subotic@users.noreply.github.com",
    },
    ports = [
        "3333/tcp",
    ],
)

# push to dockerhub
container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "daschswiss/knora-api",
    tag = "{BUILD_SCM_TAG}",
)

# use in targets needing an up-to-date docker image locally
#genrule(
#  name = "build",
#  srcs = [":image"],
#  cmd = "docker load -i $(location //docker/knora-api:image) >$@",
#  outs = ["build-output.txt"]
#)
