package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

# builds the docker image
container_image(
    name = "image",
    base = "@openjdk11//image",
    cmd = ["java", "-jar", "/salsah1/salsah1_deploy.jar"],
    # entrypoint = ["java", "-jar", "webapi_deploy.jar"],
    env = {
        "LANG": "en_US.UTF-8",
        "JAVA_OPTS": "-Dsun.jnu.encoding=UTF-8 -Dfile.encoding=UTF-8 -Dconfig.file=salsah.conf",
        "KNORA_SALSAH1_DEPLOYED": "true",
        "KNORA_SALSAH1_WORKDIR": "/salsah1"
    },
    directory = "salsah1",
    files = [
        "//salsah1:salsah1_deploy.jar",
    ],
    tars = [
        "//salsah1:public_folder_tar"
    ],
    labels = {
        "MAINTAINER": "400790+subotic@users.noreply.github.com",
    },
    ports = [
        "3335/tcp",
    ],
)

# push to dockerhub
container_push(
   name = "push",
   image = ":image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "daschswiss/knora-salsah1",
   tag = "{BUILD_SCM_TAG}"
)

# use in targets needing an up-to-date docker image locally
#genrule(
#  name = "build",
#  srcs = [":image"],
#  cmd = "docker load -i $(location //docker/knora-salsah1:image) >$@",
#  outs = ["build-output.txt"]
#)
