load("@rules_scala//scala:scala.bzl", "scala_junit_test", "scala_library")

# BagIt library (RFC 8493). Pure leaf module; consumed by //modules/webapi and
# the dsp-ingest build in later phases.
scala_library(
    name = "bagit",
    srcs = glob(["src/main/scala/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:dev_zio_zio_3",
        "@maven//:dev_zio_zio_nio_3",
        "@maven//:dev_zio_zio_streams_3",
    ],
)

scala_junit_test(
    name = "test",
    srcs = glob(["src/test/scala/**/*.scala"]),
    # Discovery is by class-name suffix; a missed suffix silently skips specs.
    suffixes = ["Spec", "IT", "Test"],
    deps = [
        ":bagit",
        "//modules/test-runner",
        "@maven//:dev_zio_zio_3",
        "@maven//:dev_zio_zio_test_3",
    ],
)
